# token-importance-scoring

./: .env.example  .gitignore  ARCHITECTURE-TECHNICAL-SPECS.md  ATTENTION-DRIFT-ANALYSIS.md  CHECKPOINT_AND_DATA_DOWNLOADS.md  CONTRIBUTING.md  LICENSE  MASTER-EXECUTION-PLAN-PHASE4-COMPLETE.md  PACKAGE-CONTENTS.md  PACKAGE-MANIFEST.md  PHASE-A-BASELINE-TESTING.md  PHASE-B-ATTENTION-DRIFT.md  PHASE-C-QUERY-AWARE-IMPLEMENTATION.md  PHASE4-PROPOSAL.md  PHASE4-REPRODUCTION-GUIDE.md  PROJECT-EVOLUTION-REPORT.md  README.md  REBUILD-INSTRUCTIONS.md  RELEASE-NOTES.md  REPOSITORY-OVERVIEW.md  REPRODUCIBILITY-GUIDE.md  SOURCE-CODE-README.md  pyproject.toml
scripts/: analyze_eagle3_attention.py  analyze_ert_metrics.py  analyze_week2_results.py  backup.sh  benchmark_inference_speed.py  binary_search_training_steps.py  build_results_table.py  check_missing_baselines.sh  compare_attention_pooling.py  container-entrypoint.sh  create_litm_training_data.py  debug_importance_application.py  debug_v8_hard_anchor.py  deep_diagnostics.py  demo_failure_recovery.py  diagnose_memory.py  diagnostic_cache_analyzer.py  diagnostic_gradient_flow.py  diagnostic_importance_inspector.py  docker-build.sh  docker-run.sh  eval.py  eval_attention_importance.py  eval_drafter.py  eval_existing_checkpoints.py  eval_litm.py  eval_msmarco.py  eval_niah.py  eval_niah_hard.py  eval_phase_b.py  generate_comparison_tables.py  generate_final_report.py  manage_cache.py  monitor_baselines.sh  prepare_msmarco.py  quick_diagnostics.py  retrain_ert_lambda_frozen.py  retrain_ert_lambda_optimized.py  (+48 more)
(+31 files in other folders)
